--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@calcom/embed-react": "^1.5.3",
     "@types/three": "^0.177.0",
     "next": "^15.3.3",
     "react": "^19.0.0",
