--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@types/three": "^0.177.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.526.0",
+    "motion": "^12.23.12",
     "next": "^15.3.3",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
